--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,4 @@
 name: Christmas Recipes
-markdown: rdiscount
-rdiscount:
-  extensions:
-    - autolink
-    - footnotes
-    - smart
-highlighter: pygments # default python pygments have been replaced by pygments.rb
+markdown: kramdown
+
+highlighter: rouge
